<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_poster"
            android:layout_width="200dp"
            android:layout_height="260dp"
            android:src="#302B39"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="15dp">

            <TextView
                android:id="@+id/tv_detail_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_name"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins"/>
            <TextView
                android:id="@+id/tv_detail_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_date"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins"/>
            <TextView
                android:id="@+id/tv_detail_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_duration"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins"/>
            <TextView
                android:id="@+id/tv_detail_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_genre"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins"/>
            <TextView
                android:id="@+id/tv_detail_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_rate"
                android:textSize="22sp"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/detail_Storyline"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins"/>
    <TextView
        android:id="@+id/tv_detail_storyline_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/detail_StorylineDescription"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins"/>


</LinearLayout>



